--- a/templates/userside/home.html
+++ b/templates/userside/home.html
@@ -55,7 +55,7 @@
                             <li>
                                 <a href="#">Links</a>
                                 <ul>
-                                    <li><a href="tel:#"><i class="icon-phone"></i>Call: +0123 456 789</a></li>
+                                    {% comment %} <li><a href="tel:#"><i class="icon-phone"></i>Call: +0123 456 789</a></li> {% endcomment %}
                                 </ul>
                             </li>
                         </ul><!-- End .top-menu -->
@@ -63,12 +63,12 @@
                
 
                     <div class="header-right">
-                        <div class="social-icons social-icons-color">
+                        {% comment %} <div class="social-icons social-icons-color">
                             <a href="#" class="social-icon social-facebook" title="Facebook" target="_blank"><i class="icon-facebook-f"></i></a>
                             <a href="#" class="social-icon social-twitter" title="Twitter" target="_blank"><i class="icon-twitter"></i></a>
                             <a href="#" class="social-icon social-instagram" title="Pinterest" target="_blank"><i class="icon-instagram"></i></a>
                             <a href="#" class="social-icon social-pinterest" title="Instagram" target="_blank"><i class="icon-pinterest-p"></i></a>
-                        </div><!-- End .soial-icons -->
+                        </div><!-- End .soial-icons --> {% endcomment %}
                         <ul style="margin-top: 15px; margin-right: 15px;">
                         
                             {% if user12 %}
@@ -83,7 +83,7 @@
    
 
 
-                        <div  class="header-dropdown">
+                        {% comment %} <div  class="header-dropdown">
                             <a href="#">USD</a>
                             <div class="header-menu">
                                 <ul>
@@ -106,7 +106,7 @@
                                 
                             </div><!-- End .header-menu -->
                         </div><!-- End .header-dropdown -->
-                    </div><!-- End .header-right -->
+                    </div><!-- End .header-right --> {% endcomment %}
                 </div>
             </div>
             <div class="header-middle">
