--- a/templates/customadmin/users.html
+++ b/templates/customadmin/users.html
@@ -108,7 +108,7 @@ body {
 		<i class='bx bx-layer'></i> Shop
 	</div>
 	<nav class="nav flex-column">
-		<a href="/adminhome/" class="nav-link active"><i class='bx bx-grid-alt'></i> Dashboard</a>
+		<a href="{% url 'adminside:dashboard' %}" class="nav-link active"><i class='bx bx-grid-alt'></i> Dashboard</a>
 		<a href="{% url 'usermanagement:usermanagement' %}" class="nav-link"><i class='bx bx-user'></i> Users</a>
 		<a href="{% url 'products:products' %}" class="nav-link"><i class='bx bx-message-square-detail'></i> Products</a>
 		<a href="{% url 'category:categorymanagement' %}" class="nav-link"><i class='bx bx-bookmark'></i> Categories</a>
