--- a/templates/userside/checkout.html
+++ b/templates/userside/checkout.html
@@ -1254,18 +1254,50 @@
                         <div class="card">
                           <div class="card-header" id="heading-1">
                             <h2 class="card-title">
+                              {% if final_amount >= 1000 %}
+
                               <input
                                 type="radio"
                                 name="payment_method"
                                 value="cash_on_delivery"
                                 id="payment-cash-on-delivery"
-                                checked
+                                
+                              <input
+                                type="radio"
+                                name="payment_method"
+                                value="cash_on_delivery"
+                                id="payment-cash-on-delivery"
+                                disabled
                               />
                               <label for="payment-cash-on-delivery"
-                                >Cash on Delivery</label
-                              >
+                              >Cash on Delivery</label>
+
+                              <p>cash on delivery not applicatble order above 1000<p>
+                                
+                              {%else %}
+                              <input
+                              type="radio"
+                              name="payment_method"
+                              value="cash_on_delivery"
+                              id="payment-cash-on-delivery"
+                              checked
+                            <input
+                              type="radio"
+                              name="payment_method"
+                              value="cash_on_delivery"
+                              id="payment-cash-on-delivery"
+                              
+                            />
+                            <label for="payment-cash-on-delivery"
+                            >Cash on Delivery</label
+                          >
+                            {% endif %}
+
+                             
                             </h2>
                           </div>
+                        
+
                           <div class="card-header" id="heading-1">
                             <h2 class="card-title">
                              
@@ -1293,6 +1325,7 @@
                                 name="payment_method"
                                 value="razor_pay"
                                 id="payment-razor-pay"
+                                checked
                               />
                               <label for="payment-razor-pay">Razor Pay</label>
                             </h2>
